--- a/vignettes/aicsPaper.Rmd
+++ b/vignettes/aicsPaper.Rmd
@@ -172,7 +172,7 @@ To facilitate the manipulation of the genotyping data, the large 1KG
 genotyping files are split into smaller files (one per sample).
 
 As there is one genotyping file per chromosome, the process must be executed 
-for each of those.
+for each of chromosome
 
 The splitting is done through a bash script:
 
@@ -182,18 +182,31 @@ The splitting is done through a bash script:
 
 ## The script has to be run separately for each chromosome
 
-## The variable chrCur is one specific chromosome (example, chrCur="chr1")
-## The variable PATHGENO is a specified directory
 ## Create one directory for the specific chromosome
+##
+## Two variables need to be assigned
+## The variable PATHGENO is the path where the split 1KG genotyping 
+##   files will be located
+## The variable chrCur is the current chromosome (ex: "chr1"), a sub-directory 
+##   with the name of the chromosome will be created. The variable must 
+##   include the prefix "chr".
+##
+## Ex: PATHGENO=./genotypingPerSample
+## Ex: chrCur=chr1
+##
 mkdir ${PATHGENO}/${chrCur}
+cd ${PATHGENO}/${chrCur}
 
-## The variable FILECUR is the associated VCF file for the specific chromosome
-## FILECUR is the vcf file from 1000 genome
-## Example, FILECUR=ALL.chr1.shapeit2_integrated_v1a.GRCh38.20181129.phased.vcf.gz
+## The variable FILECUR is the associated 1KG genotyping VCF file for the 
+##     specific chromosome
+## The variable FILECUR must also contain the relative or complete path to 
+##     the VCF file
+## Ex: FILECUR=../../1KG_files/ALL.chr1.shapeit2_integrated_v1a.GRCh38.20181129.phased.vcf.gz
 
-## There is 2548 samples in the VCF file
+## There is 2548 samples in one phase VCF file
 ## The information associated to each sample is extracted and a VCF file 
-## specific to this sample for the current chromosome is generated
+## specific to each sample for the current chromosome is generated
+##
 for i in `seq 1 2548`
 do
     j=$(( $i + 9 ))
@@ -210,6 +223,12 @@ done
 
 The genotyping information for all chromosomes is merged so that there is only 
 one genotyping file per sample.
+
+
+```{r graphChr1KGSNV, echo = FALSE, fig.align="center", fig.cap="The function groupChr1KGSNV() merge samples that are split by chromosomes into one file.", out.width = '120%', results='asis'}
+knitr::include_graphics("groupChr1KGSNV_v01.png")
+```
+
 
 The __groupChr1KGSNV()__ function is used to combine the genotyping information 
 from multiple files.
